@@ -4,3 +4,4 @@ Thanks to :
 * Brandon Casey for many bug fixes
 * Thomas Zimmermann for fixing the string measurement commands and improving the autotools building scripts
 * Matt Turner for demonstrating that QuesoGLC could be compiled under Windows with a few changes
+* Giel van Schijndel and Dennis Schridde for providing the pkg-config files and reporting many bugs
