@@ -3,6 +3,8 @@ Changes made from the "0.7.1" release to the "0.7.2" release:
 
 * Bertrand Coconnier:
 
+- Feature request #1947346 : added files for pkg-config (thanks to Giel
+  van Shijndel and Dennis Schridde for providing them)
 - Fixed bug #1947464 (Warnings are generated when compiling with gcc option
   -Wstrict-prototypes)
 - Fixed bug #1935557 (Fonts are not rendered correctly when the resolution is
